<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/son1"
    tools:context=".MainActivity">

<EditText
        android:id="@+id/txten"
        android:layout_width="431dp"
        android:layout_height="57dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:text="@string/hovaten"
        android:textColor="#F30606"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/txtsdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:text="@string/sodienthoai"
        android:textColor="#F30606"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gioitinh"
        android:textSize="20sp" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rbnam"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/nam"
            android:textSize="20sp"  />

        <RadioButton
            android:id="@+id/rbnu"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/nu"
            android:textSize="20sp" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/quoctich"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/chuthich"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="255dp"
        android:layout_height="157dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-35dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            tools:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btndangki"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/dangki"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/btnhuy"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:text="@string/huy"
        tools:text="Hủy"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="230dp" />


</LinearLayout>

